add more detailed example